<resources>
    <string name="app_name">火山小视频</string>
    <string name="title_user_name" />
    <string name="user_photo" />
    <string name="fans_num">0</string>
    <string name="attention_num">0</string>
    <string name="hot_num">0</string>
    <string name="fans_name">粉丝</string>
    <string name="attention_name">关注</string>
    <string name="hot_name">火力</string>
    <string name="user_recommend" />
    <string name="Null" />
    <string name="live_time">25\n七月</string>
    <string name="live_num">直播数量:1</string>
    <string name="gift_rank">礼物榜</string>
    <string name="sendPrivateMessage">发私信</string>
    <string name="deleteConfirm">确定删除吗？</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="music_history">历史播放记录</string>
    <string name="searchMusic">查询历史记录</string>
    <string name="dialogIfUnattention">确定不关注此人？</string>
</resources>
